# stm32-async-i2c-slave

./: Cargo.toml  README.md
examples/bme280-emulator/: Cargo.toml  Embed.toml
examples/bme280-emulator/.cargo/: config.toml
examples/bme280-emulator/src/: main.rs
src/: bridge.rs  interrupts.rs  lib.rs  receive_buffer.rs  send_buffer.rs  slave.rs  state_holder.rs  tx_lock.rs
