[package]
name = "stm32-async-i2c-slave"
version = "0.1.0"
edition = "2021"

[dependencies]
atomic = "0.6.0"
bytemuck = { version = "1.14.0", features = ["derive"] }
critical-section = "1.1.2"
defmt = { version = "0.3.5", optional = true }
heapless = "0.7.16"
embassy-stm32 = { version = "0", features = [ "stm32f103c6", "unstable-pac" ] }
embassy-sync = "0"

[features]
defmt = ["dep:defmt"]
dump = []

[patch.crates-io]
embassy-stm32 = { git = "https://github.com/embassy-rs/embassy" }
embassy-sync = { git = "https://github.com/embassy-rs/embassy" }
