[package]
name = "bme280-emulator"
version = "0.1.0"
edition = "2021"

[dependencies]
cortex-m = { version = "0.7.7", features = ["critical-section-single-core"] }
cortex-m-rt = "0.7.3"

critical-section = "1.1.2"
stm32-async-i2c-slave = { path = "../../", features = ["dump", "defmt"] }

embassy-executor = { version = "0.3.0", features = [
    "nightly",
    "arch-cortex-m",
    "executor-thread",
    "integrated-timers",
] }
embassy-time = { version = "0.1.3", features = [
    "defmt",
    "defmt-timestamp-uptime",
] }
embassy-stm32 = { version = "0", features = [
    "nightly",
    "defmt",
    "unstable-pac",
    "stm32f103c6",
    "time-driver-any",
    "exti",
    "unstable-traits",
] }

defmt = "0.3.5"
defmt-rtt = "0.4.0"
panic-probe = { version = "0.3.1", features = ["print-defmt"] }

num_enum = { version = "0.7.0", default-features = false }

[patch.crates-io]
embassy-executor = { git = "https://github.com/embassy-rs/embassy" }
embassy-time = { git = "https://github.com/embassy-rs/embassy" }
embassy-stm32 = { git = "https://github.com/embassy-rs/embassy" }
embassy-sync = { git = "https://github.com/embassy-rs/embassy" }

[profile.dev]
opt-level = "s"

[profile.release]
debug = 2